feat: CRUD de user, loan, book e copies

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SECRET_KEY=""
 
-POSTGRES_DB_NAME = db_bibliote_ka
-POSTGRES_USERNAME = 
-POSTGRES_PASSWORD = 
-POSTGRES_DB_HOST = 
-POSTGRES_DB_PORT = 
+POSTGRE_DB_NAME = db_bibliote_ka
+POSTGRE_USERNAME = 
+POSTGRE_PASSWORD = 
+POSTGRE_DB_HOST = 
+POSTGRE_DB_PORT = 
