--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ POSTGRE_USERNAME =
 POSTGRE_PASSWORD = 
 POSTGRE_DB_HOST = 
 POSTGRE_DB_PORT = 
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=email
+EMAIL_HOST_PASSWORD=pass
